deploy/02-deploy-sgb-cargas-adm-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sgb-cargas-adm-api
  name: sgb-cargas-adm-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sgb-cargas-adm-api
  template:
    metadata:
      labels:
        app: sgb-cargas-adm-api
    spec:
      containers:
      - image: __IMAGE__
        name: sgb-cargas-adm-api
