deploy/03-svc-sgb-cargas-adm-api.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sgb-cargas-adm-api
  name: sgb-cargas-adm-api
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: sgb-cargas-adm-api
