deploy/04-route-sgb-cargas-adm-api.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: sgb-cargas-adm-api
spec:
  host: __DOMAIN_NAME__
  tls:
    caCertificate: |+
      -----BEGIN CERTIFICATE-----
      __FIRST_CA_CERT__
      -----END CERTIFICATE-----
      -----BEGIN CERTIFICATE-----
      __SECOND_CA_CERT__
      -----END CERTIFICATE-----

    certificate: |
      -----BEGIN CERTIFICATE-----
      __CERT__
      -----END CERTIFICATE-----
    insecureEdgeTerminationPolicy: Redirect
    key: |
      -----BEGIN RSA PRIVATE KEY-----
      __KEY__
      -----END RSA PRIVATE KEY-----
    termination: edge
  to:
    kind: ""
    name: sgb-cargas-adm-api
    weight: null
status:
  ingress: null
